# rok-ingestion

./: .gitignore  README.md  README.md.backup  buildspec.yml  pyproject.toml  requirements.txt
data/inbox/kingdom_1234/2026-01-26/: players_20260126_143022.csv
docker/ingest/: .dockerignore  Dockerfile
frontend/: .env.development  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  state.js  style.css
frontend/src/api/: leaderboard.js
frontend/src/components/: DateSelector.js  KingdomSelector.js  LeaderboardTable.js  LimitInput.js  MetricSelector.js
infra/athena/: 01_create_database.sql  create_table_rok_players.sql
infra/terraform/: README.md  apigw_leaderboard.tf  frontend.tf  leaderboard_api.tf  main.tf  outputs.tf  variables.tf
scripts/: README.md  deploy_frontend.sh  run_local.py
src/ingest_players/: __init__.py  aws_s3.py  config.py  handler.py  hashing.py  io_local.py  normalize.py  s3_paths.py  validation.py
src/leaderboard_api/: __init__.py  athena.py  config.py  handler.py  metrics.py  sql.py  validation.py
tests/: test_leaderboard_sql.py  test_leaderboard_validation.py  test_local_ingestion_smoke.py  test_s3_paths.py
