[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rok-ingestion"
version = "0.1.0"
description = "AWS Lambda ingestion service for RoK player data"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "pyarrow",
    "boto3",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
